--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Tanvi Sule</a>
+        <a class="navbar-brand" href="/" title="Homepage">Tanvi Sule</a>
         <button
           class="navbar-toggler"
           type="button"
