--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Tanvi Sule</a>
+        <a class="navbar-brand" href="/" title="Homepage">Tanvi Sule</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,15 +36,27 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="/"
+                title="Homepage"
                 >Home</a
               >
             </li>
+
             <li class="nav-item">
-              <a class="nav-link" href="about.html">About me</a>
+              <a class="nav-link" href="/about.html" title="About Tanvi Sule"
+                >About me</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
+              <a
+                class="nav-link"
+                href="/about.html#contact"
+                title="Contact Tanvi Sule"
+                >Contact me</a
+              >
             </li>
           </ul>
         </div>
