--- a/index.html
+++ b/index.html
@@ -69,17 +69,28 @@
     <h2 class="text-center">👋 Hi I am</h2>
     <h1 class="text-center">Tanvi Sule</h1>
     <h3 class="text-center">
-      🇮🇳 Environmental Resilience and Adaptation Professional, based in
-      Philadelphia🇺🇸
+      🇮🇳 Environmental Resilience and Adaptation Professional, based in United
+      States🇺🇸
     </h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a
+        href="/about.html#contact"
+        class="primary-link"
+        title="Contact Tanvi Sule"
+        >Contact me</a
+      >
+      <a href="/about.html" class="secondary-link" title="About Tanvi Sule"
+        >About me</a
+      >
     </div>
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <img src="images/yoga.png" class="img-fluid rounded" />
+          <img
+            src="/images/yoga.png"
+            alt=" Yoga Project"
+            class="img-fluid rounded d-none d-sm-block"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -90,7 +101,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yoga App</a>
+            <a href="#" class="primary-link" title="Yoga Project"
+              >Launch Yoga App</a
+            >
           </div>
         </div>
       </div>
@@ -104,16 +117,26 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link">Launch Weather App</a>
+            <a href="#" class="primary-link" title=" Weather  Project"
+              >Launch Weather App</a
+            >
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" class="img-fluid rounded" />
+          <img
+            src="/images/weather.png"
+            alt=" Weather  Project"
+            class="img-fluid rounded d-none d-sm-block"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yogurt.png" class="img-fluid rounded" />
+          <img
+            src="/images/yogurt.png"
+            alt=" Yogurt Project"
+            class="img-fluid rounded d-none d-sm-block"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -124,7 +147,9 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link">Launch Yogurt App</a>
+            <a href="#" class="primary-link" title=" Yogurt Project"
+              >Launch Yogurt App</a
+            >
           </div>
         </div>
       </div>
