about - description, alt

--- a/about.html
+++ b/about.html
@@ -16,7 +16,12 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>About Tanvi Sule</title>
+    <title>About me -Tanvi Sule</title>
+    <meta
+      name="description"
+      content="About Tanvi Sule, an environmental science and studies professional, based in the United
+      States"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -78,13 +83,25 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="/images/yoga.png"
+            alt=" Yoga Project"
+            class="img-fluid p-2 m-4 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="/images/weather.png"
+            alt=" Weather Project"
+            class="img-fluid p-2 m-4 shadow rounded"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" class="img-fluid p-2 shadow rounded" />
+          <img
+            src="/images/yogurt.png"
+            alt=" Yogurt Project"
+            class="img-fluid p-2 m-4 shadow rounded"
+          />
         </div>
       </div>
     </div>
