--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Tanvi Sule is an environmental professional based in United States, check out her projects and contact her for job inquiries"
     />
-    <title>Environmental Professional -Tanvi Sule]</title>
+    <title>Environmental Science & Studies Professional -Tanvi Sule]</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -69,8 +69,8 @@
     <h2 class="text-center">👋 Hi I am</h2>
     <h1 class="text-center">Tanvi Sule</h1>
     <h3 class="text-center">
-      🇮🇳 Environmental Resilience and Adaptation Professional, based in United
-      States🇺🇸
+      🇮🇳 Environmental Resilience and Adaptation Professional, based in the
+      United States🇺🇸
     </h3>
     <div class="navigation-links mb-5">
       <a
