--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Tanvi Sule is an environmental professional based in United States, check out her projects and contact her for job inquiries"
     />
-    <title>Environmental Science & Studies Professional -Tanvi Sule]</title>
+    <title>Environmental Science & Studies Professional -Tanvi Sule</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -101,7 +101,7 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title="Yoga Project"
+            <a href="#" class="primary-link project-link" title="Yoga Project"
               >Launch Yoga App</a
             >
           </div>
@@ -117,7 +117,10 @@
             explicabo eum dolore.
           </p>
           <div class="mb-5 mt-5">
-            <a href="#" class="primary-link" title=" Weather  Project"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title=" Weather  Project"
               >Launch Weather App</a
             >
           </div>
@@ -147,7 +150,10 @@
             explicabo eum dolore.
           </p>
           <div class="mt-5">
-            <a href="#" class="primary-link" title=" Yogurt Project"
+            <a
+              href="#"
+              class="primary-link project-link"
+              title=" Yogurt Project"
               >Launch Yogurt App</a
             >
           </div>
