--- a/about.html
+++ b/about.html
@@ -41,17 +41,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a
-                class="nav-link active"
-                aria-current="page"
-                href="/"
-                title="Homepage"
+              <a class="nav-link" aria-current="page" href="/" title="Homepage"
                 >Home</a
               >
             </li>
 
             <li class="nav-item">
-              <a class="nav-link" href="/about.html" title="About Tanvi Sule"
+              <a
+                class="nav-link active"
+                href="/about.html"
+                title="About Tanvi Sule"
                 >About me</a
               >
             </li>
