Change container class col-md-6 to sm

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
             src="/images/yoga.png"
             alt=" Yoga Project"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yoga app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -108,7 +108,7 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Weather app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -125,7 +125,7 @@
             >
           </div>
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
             src="/images/weather.png"
             alt=" Weather  Project"
@@ -134,14 +134,14 @@
         </div>
       </div>
       <div class="row mt-5">
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <img
             src="/images/yogurt.png"
             alt=" Yogurt Project"
             class="img-fluid rounded d-none d-sm-block"
           />
         </div>
-        <div class="col-md-6">
+        <div class="col-sm-6">
           <h2 class="mb-3">Yogurt app</h2>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
